--- a/src/components/TodoListItem/index.scss
+++ b/src/components/TodoListItem/index.scss
@@ -1,11 +1,12 @@
 .todo-list-item{
     background-color: white;
+    margin-top: 2px;
     .mdc-list-item__graphic{
         width:18px;
         height:19px;
         margin-right:1rem;
     }
-    &+&{
-        margin-top: 2px;
-    }
+  .mdc-list-item__text{
+      flex:1;
+  }
 }
